# dumpchannel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/example_package/: __init__.py  config_example.py
src/example_package/model/: message.py
tests/: __init__.py
